--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   
-    <title>React App</title>
+    <title>나의 영어사춘기 과제</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
